feat(global-variables): add integration test for global variable